# ChangeLog for app-admin/msyslog
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/msyslog/Attic/ChangeLog,v 1.5 2002/07/30 03:03:26 cselkirk Exp $

*msyslog-1.08e (25 Jul 2002)

  29 Jul 2002; Calum Selkrik <cselkirk@gentoo.org> msyslog-1.08e.ebuild :

  Added PPC to KEYWORDS. Added RDEPEND.
  25 Jul 2002; Seemant Kulleen <seemant@gentoo.org> msyslog-1.08e.ebuild :

  Version bump.

*msyslog-1.08a-r3 (25 Jul 2002)

  25 Jul 2002; Seemant Kulleen <seemant@gentoo.org> msyslog-1.08a-r3.ebuild
  files/msyslog-{confd,init} files/msyslog.conf
  files/msyslog-1.08a-gentoo.diff :

  Moved the stuff out of files, and into a tar.bz2 that is on the mirrors
  instead.

*msyslog-1.08a-r2 (3 May 2002)

  3 May 2002; Donny Davies <woodchip@gentoo.org> :
  
  Add LICENSE, SLOT, $Headers.

*msyslog-1.08a-r1 (1 Feb 2002)

  11 March 2002; M.Schlemmer <azarah@gentoo.org> :

  Update rc-script to provide "logger".

*msyslog-1.08a (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.