@@ -1,0 +1,8 @@
+# Copyright 1999-2002 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License, v2 or later
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/msyslog/files/Attic/msyslog-confd,v 1.4 2002/08/08 02:42:20 seemant Exp $
+
+# Config file for /etc/init.d/msyslog
+
+# Passed to /usr/sbin/msyslogd...
+MSYSLOG_OPTS="-i unix /dev/log -i linux"
