@@ -1,0 +1,22 @@
+#!/sbin/runscript
+# Copyright 1999-2002 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License, v2 or later
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/msyslog/files/Attic/msyslog-init,v 1.5 2002/08/08 02:42:20 seemant Exp $
+
+depend() {
+	need clock
+	provide logger
+}
+
+start() {
+	ebegin "Starting msyslog"
+	start-stop-daemon --start --quiet --exec /usr/sbin/msyslogd -- ${MSYSLOG_OPTS}
+	eend $? "Failed to start msyslog"
+}
+
+stop() {
+	ebegin "Stopping msyslog"
+	start-stop-daemon --stop --quiet --pidfile /var/run/msyslogd.pid
+	eend $? "Failed to stop msyslog"
+}
+
