@@ -1,0 +1,73 @@
+# /etc/msyslog/msyslog.conf: configuration file for msyslogd.
+#
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/msyslog/files/Attic/msyslog.conf,v 1.4 2002/08/08 02:42:20 seemant Exp $
+#
+# Msyslog uses a slightly different syntax than the old syslogd.
+# See below and in /usr/share/doc/msyslog/examples for samples
+# and documentation.  See also the manpages for msyslog.conf(5),
+# msyslogd(8), and the output modules: om_mysql(8), om_regex(8),
+# om_pgsql(8), om_classic(8).
+#
+# The logfiles you specify with %classic must exist beforehand;
+# they will not be auto-created.
+
+
+# The default enables these two standard logfiles.
+*.*;auth,authpriv.none			%classic /var/log/syslog
+*.warn;mark.*;auth,authpriv.none	%classic /var/log/messages
+
+# Emergencies are sent to everybody currently logged in.
+*.emerg				%classic *
+
+# The named pipe /dev/xconsole is for the `xconsole' utility.
+# To use it, you must invoke `xconsole' with the `-file' option:
+# $ xconsole -file /dev/xconsole [...]
+*.warn				%classic |/dev/xconsole
+
+# This puts everything into one file.
+#*.*				%classic /var/log/all
+
+# Sending messages to a virtual console.
+#*.*;auth,authpriv.none		%classic /dev/tty8
+
+# Logging by facility.
+#auth,authpriv.*		%classic /var/log/auth.log
+#cron.*				%classic /var/log/cron.log
+#daemon.*			%classic /var/log/daemon.log
+#ftp.*				%classic /var/log/ftp.log
+#kern.*				%classic /var/log/kern.log
+#lpr.*				%classic /var/log/lpr.log
+#mail.*				%classic /var/log/mail.log
+#news.*				%classic /var/log/news.log
+#syslog.*			%classic /var/log/syslog.log
+#user.*				%classic /var/log/user.log
+#uucp.*				%classic /var/log/uucp.log
+
+# Logging for the mail system.
+#mail.info			%classic /var/log/mail.info
+#mail.warn			%classic /var/log/mail.warn
+#mail.err			%classic /var/log/mail.err
+
+# Logging for INN news system.
+#news.crit			%classic /var/log/news/news.crit
+#news.err			%classic /var/log/news/news.err
+#news.notice			%classic /var/log/news/news.notice
+
+# Send messages to central logging host through UDP transport.
+# See im_udp(8) for how to set up the server.
+#*.*				%classic @loghost
+
+# Logging to an SQL database.  SECURITY ALERT.  Since the mysql/postgresql
+# passwords need to appear here, this file should not be world readable!
+# ---
+# Log to server logger.mydomain.edu through MySQL
+#*.*	%mysql -s logger.mydomain.edu -u loguser -p loguserpassword -d syslogDB -t syslogTB
+#
+# Log to server logger.mydomain.edu through MySQL, using DELAYED inserts
+#*.*	%mysql -D -s logger.mydomain.edu -u loguser -p loguserpassword -d syslogDB -t syslogTB
+#
+# Log to server logger.mydomain.edu thru PGSQL
+#*.*	%pgsql -s logger.mydomain.edu -u loguser -p loguserpassword -d syslogDB -t syslogTB
+
+# Protect a log of classic module.
+#auth.info	%peo -l -k /var/lib/msyslog/.var.log.authlog.key %classic /var/log/authlog
