@@ -1,8 +1,13 @@
 # ChangeLog for app-admin/msyslog
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/msyslog/Attic/ChangeLog,v 1.5 2002/07/30 03:03:26 cselkirk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/msyslog/Attic/ChangeLog,v 1.6 2002/08/08 02:42:20 seemant Exp $
 
 *msyslog-1.08e (25 Jul 2002)
+
+  07 Aug 2002; Seemant Kulleen <seemant@gentoo.org> msyslog-1.08e.ebuild
+  files/msyslog-{confd,init} files/msyslog.conf :
+
+  Added those files back into files/ and changed bz2 to be just the patch.
 
   29 Jul 2002; Calum Selkrik <cselkirk@gentoo.org> msyslog-1.08e.ebuild :
 
